[workspace]
resolver = "2"

members = [
    "ircomponent",
    "irwindow"
]

[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
ircomponent = { path = "ircomponent" }
irwindow = { path = "irwindow" }

[features]
default = ["macos"]
macos = []
windows = []
# default = []

# [target.'cfg(target_os = "macos")'.features]

# [target.'cfg(target_os = "windows")'.features]
# default = ["windows"]


# [target.'cfg(target_os = "macos")'.dependencies]
# macos-implementation = []