[workspace]
resolver = "2"

members = [
]

[package]
name = "ir"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]

[features]
default = ["macos"]
macos = []
windows = []
# default = []

# [target.'cfg(target_os = "macos")'.features]

# [target.'cfg(target_os = "windows")'.features]
# default = ["windows"]


# [target.'cfg(target_os = "macos")'.dependencies]
# macos-implementation = []