[package]
name = "irwindow"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wingdi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]